--- a/index.html
+++ b/index.html
@@ -23,40 +23,32 @@
 
 <body>
   <div class="main-container">
-    <div class="header">
-      <h1>Get <span>insights</span> that help your business grow.</h1>
+    <div class="info-container">
+      <div class="header">
+        <h1>Get <span>insights</span> that help your business grow.</h1>
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.</p>
+        <div class="stats">
+          <div class="box-1">
+            <h3>10K+</h3>
+            <p>Companies</p>
+          </div>
+          <div class="box-2">
+            <h3>314</h3>
+            <p>Templates</p>
+          </div>
+          <div class="box-3">
+            <h3>12M+</h3>
+            <p>Queries</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="paragraph">
-      <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
-        experience, and overall efficiency.</p>
-    </div>
-    <div class="stats">
-      <div class="box-1">
-        <h3>10K+</h3>
-        <p>Companies</p>
-      </div>
-      <div class="box-2">
-        <h3>314</h3>
-        <p>Templates</p>
-      </div>
-      <div class="box-3">
-        <h3>12M+</h3>
-        <p>Queries</p>
-      </div>
+    <div class="image-container">
+      <img id="image" src="images/image-header-desktop.jpg" alt="company photo">
+
     </div>
   </div>
-
-
-
-
-  <!-- Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries -->
 
 
   <footer>
