--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <div class="stats">
           <div class="box-1">
             <h3>10K+</h3>
-            <p>Companies</p>
+            <p id="facts">Companies</p>
           </div>
           <div class="box-2">
             <h3>314</h3>
-            <p>Templates</p>
+            <p id="facts">Templates</p>
           </div>
           <div class="box-3">
             <h3>12M+</h3>
-            <p>Queries</p>
+            <p id="facts">Queries</p>
           </div>
         </div>
       </div>
@@ -49,12 +49,6 @@
 
     </div>
   </div>
-
-
-  <footer>
-    <!-- Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>. -->
-  </footer>
 </body>
 
 </html>
